day04/mysql.yaml
---
apiVersion: v1
kind: Namespace 
metadata:
  name: dbns

---
apiVersion: v1
kind: Service
metadata:
  name: db-hsvc
  namespace: dbns
spec:
  clusterIP: None
  selector:
    name: db-po
  ports:
  - port: 3306
    targetPort: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  namespace: dbns
spec:
  type: ClusterIP
  selector:
    name: db-po
  ports:
  - port: 3306
    targetPort: 3306

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-sts
  namespace: dbns
spec:
  replicas: 1
  serviceName: db-hsvc
  selector:
    matchLabels:
      name: db-po
  volumeClaimTemplates:
  - metadata:
      name: db-pvc
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: do-block-storage 
      resources:
        requests:
          storage: 1Gi
  template:
    metadata:
      name: db-po
      labels:
        name: db-po
    spec:
      containers:
      - name: db-container
        image: mysql:8
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: db-pvc
          mountPath: /var/lib/mysql
        ports:
        - containerPort: 3306
