day04/fakeapi.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: fakeapi

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fakeapi-deploy
  namespace: fakeapi
  labels:
    name: fakeapi-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      name: fakeapi-po
  template:
    metadata:
      name: fakeapi-po
      labels:
        name: fakeapi-po
    spec:
      containers:
      - name: fakeapi-container
        image: chukmunnlee/fake-api:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: fakeapi-svc
  namespace: fakeapi
spec:
  type: ClusterIP
  selector:
    name: fakeapi-po
  ports:
  - port: 3000
    targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fakeapi-ing
  namespace: fakeapi
  labels:
    name: fakeapi-ing
spec:
  ingressClassName: nginx
  rules:
  - host: api-188.166.196.227.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fakeapi-svc
            port:
              number: 3000
